Updation- Sample HTML and CSS Project

--- a/style.css
+++ b/style.css
@@ -1,1 +1,26 @@
-
+.heading {
+  text-align: center;
+  display: flex;
+  flex: content;
+  background-color: aqua;
+  width: 100%;
+  border: 2px solid firebrick;
+  padding: 2px;
+}
+.heading h1 {
+  font-style: italic;
+  border: 1px solid navy;
+  border-radius: 30%;
+  padding-right: 3px;
+}
+.heading > h2 {
+  font-style: oblique;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-display: initial;
+  border: 2px solid gray;
+  margin-left: 2px;
+  width: 100%;
+  height: 100%;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
